--- a/package.json
+++ b/package.json
@@ -26,10 +26,10 @@
     "style-loader": "^1.1.3",
     "to-string-loader": "^1.1.6",
     "url-loader": "^4.1.0",
-    "webpack": "^4.42.1",
-    "webpack-bundle-analyzer": "^3.7.0",
+    "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.10.3"
+    "webpack-dev-server": "^3.11.0",
+    "webpack-bundle-analyzer": "^3.7.0"
   },
   "dependencies": {
     "preact": "^10.4.0"
