--- a/web-comp/date-picker/package.json
+++ b/web-comp/date-picker/package.json
@@ -1,19 +1,26 @@
 {
   "name": "@web-comp/date-picker",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Date range picker web component for (angular, react, etc.)",
-  "main": "main.2ecbf8e783e3c6fadded.js",
+  "main": "main.7d838e54067101ed603e.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": ["date picker", "date range picker", "angular", "react", "vue", "web component"],
+  "keywords": [
+    "date picker",
+    "date range picker",
+    "angular",
+    "react",
+    "vue",
+    "web component"
+  ],
   "author": "sudobird",
   "repository": {
-    "type" : "git",
-    "url" : "https://github.com/sudobird/web-comp.git"
+    "type": "git",
+    "url": "https://github.com/sudobird/web-comp.git"
   },
   "license": "ISC",
   "peerDependencies": {
-    "@web-comp/core": "1.0.1"
+    "@web-comp/core": "latest"
   }
 }
